<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="skyray.waol2000.FragmentMaintain_ConnectionOut">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="标样1浓度" />

        <View
            android:layout_width="@dimen/form_padding"
            android:layout_height="match_parent"></View>

        <EditText
            android:id="@+id/etContentOne"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp">

    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="标样2浓度" />

        <View
            android:layout_width="@dimen/form_padding"
            android:layout_height="match_parent"></View>

        <EditText
            android:id="@+id/etContentTwo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp">

    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="标定时间(时)" />

        <View
            android:layout_width="@dimen/form_padding"
            android:layout_height="match_parent"></View>

        <EditText
            android:id="@+id/etCalibrateTime"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp">

    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="标定间隔(天)" />

        <View
            android:layout_width="@dimen/form_padding"
            android:layout_height="match_parent"></View>

        <EditText
            android:id="@+id/etCalibrateInterval"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp">

    </View>

    <com.kyleduo.switchbutton.SwitchButton
        android:id="@+id/autoCalibrate"
        style="@style/SwitchButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/nh3n_textSize"
        app:kswTextOff="@string/sw_autoCalibrateOff"
        app:kswTextOn="@string/sw_autoCalibrateOn" />

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp">

    </View>

    <com.kyleduo.switchbutton.SwitchButton
        android:id="@+id/firstLoopCalibrate"
        style="@style/SwitchButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/nh3n_textSize"
        app:kswTextOff="@string/sw_firstLoopCalibrateOff"
        app:kswTextOn="@string/sw_firstLoopCalibrateOn" />

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp">

    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="40dp"
            android:layout_height="wrap_content">

        </View>

        <Button
            android:id="@+id/btnConfirmCalibrateConfig"
            style="@style/toolButtonStyle"
            android:text="保存" />

        <View
            android:layout_width="@dimen/form_padding"
            android:layout_height="wrap_content">

        </View>

        <Button
            android:id="@+id/btnCancelCalibrateConfig"
            style="@style/toolButtonStyle"
            android:text="取消" />

    </LinearLayout>
</LinearLayout>
