<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="skyray.waol2000.FragmentMaintain_ConnectionOut">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnValveAction"
            style="@style/toolButtonStyle"
            android:text="阀动作" />

        <View
            android:layout_width="@dimen/form_padding"
            android:layout_height="match_parent"></View>

        <Button
            android:id="@+id/btnPumpAction"
            style="@style/toolButtonStyle"
            android:text="泵动作" />

        <View
            android:layout_width="@dimen/form_padding"
            android:layout_height="match_parent"></View>

        <Button
            android:id="@+id/btnADSamplingAction"
            style="@style/toolButtonStyle"
            android:text="AD采样动作" />

        <View
            android:layout_width="@dimen/form_padding"
            android:layout_height="match_parent"></View>

        <Button
            android:id="@+id/btnwaitingAction"
            style="@style/toolButtonStyle"
            android:text="等待动作" />

        <View
            android:layout_width="@dimen/form_padding"
            android:layout_height="match_parent"></View>

        <Button
            android:id="@+id/btnInjectionAction"
            style="@style/toolButtonStyle"
            android:text="进样动作" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"></View>
    <View
        android:background="@color/color_dark_grey"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"></View>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"></View>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--阀动作相关-->
        <LinearLayout
            android:id="@+id/ll_valveAction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <include layout="@layout/action_valve_list"></include>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <TextView
                    android:text="动作名称"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/etActionValveName"
                    android:inputType="text"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="阀名称" />

                <Spinner
                    android:id="@+id/ddl_valveAction"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"></Spinner>

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/sb_ActionValveStatus"
                    style="@style/SwitchButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/nh3n_textSize"
                    app:kswTextOff="@string/switchOff"
                    app:kswTextOn="@string/switchOn" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/form_padding"></View>

                <Button
                    android:id="@+id/btnAddValveAction"
                    style="@style/toolButtonStyle"
                    android:text="@string/add" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/form_padding"></View>

                <Button
                    android:id="@+id/btnDeleteValveAction"
                    style="@style/toolButtonStyle"
                    android:text="@string/delete" />

            </LinearLayout>

        </LinearLayout>

        <!--泵动作相关-->
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ll_pumpAction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <include layout="@layout/action_pump_list"></include>
            </LinearLayout>

            <LinearLayout android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <TextView
                    android:text="动作名称"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/etActionPumpName"
                    android:inputType="text"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="泵名称" />

                <Spinner
                    android:id="@+id/ddl_pumpAction"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"></Spinner>

                <TextView
                    android:text="速度"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/ddl_pumpSpeed"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"></Spinner>

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/sb_ActionPumpStatus"
                    style="@style/SwitchButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/nh3n_textSize"
                    app:kswTextOff="@string/switchOff"
                    app:kswTextOn="@string/switchOn" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="6dp"></View>

                <Button
                    android:id="@+id/btnAddPumpAction"
                    style="@style/toolButtonStyle"
                    android:text="@string/add" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="6dp"></View>

                <Button
                    android:id="@+id/btnDeletePumpAction"
                    style="@style/toolButtonStyle"
                    android:text="@string/delete" />

            </LinearLayout>

        </LinearLayout>

        <!--采样动作-->
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ll_adSamplingAction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <include layout="@layout/action_adsample_list"></include>
            </LinearLayout>

            <LinearLayout android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <TextView
                    android:text="动作名称"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/etActionADSampleName"
                    android:inputType="text"
                    android:maxLength="20"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="计数次数" />

                <EditText
                    android:id="@+id/etActionADSampleCount"
                    android:inputType="number"
                    android:maxLength="2"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/sb_ActionADSampleVoltageType"
                    style="@style/SwitchButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/nh3n_textSize"
                    app:kswTextOff="@string/voltageOriginal"
                    app:kswTextOn="@string/voltageFinal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="6dp"></View>

                <Button
                    android:id="@+id/btnAddADSampleAction"
                    style="@style/toolButtonStyle"
                    android:text="@string/add" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="6dp"></View>

                <Button
                    android:id="@+id/btnDeleteADSampleAction"
                    style="@style/toolButtonStyle"
                    android:text="@string/delete" />

            </LinearLayout>

        </LinearLayout>

        <!--等待动作-->
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ll_watingAction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <include layout="@layout/action_waittime_list"></include>
            </LinearLayout>

            <LinearLayout android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <TextView
                    android:text="动作名称"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/etActionWaittimeName"
                    android:inputType="text"
                    android:maxLength="20"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="等待时间" />

                <EditText
                    android:id="@+id/etActionWaitTimeValue"
                    android:inputType="number"
                    android:hint="等待时间(分)"
                    android:maxLength="2"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="6dp"></View>

                <Button
                    android:id="@+id/btnAddWaitTimeAction"
                    style="@style/toolButtonStyle"
                    android:text="@string/add" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="6dp"></View>

                <Button
                    android:id="@+id/btnDeleteWaitTimeAction"
                    style="@style/toolButtonStyle"
                    android:text="@string/delete" />

            </LinearLayout>

        </LinearLayout>

        <!--进样动作相关-->
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ll_injectionAction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <include layout="@layout/action_injection_list"></include>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <TextView
                    android:text="动作名称"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/etActionInjectionName"
                    android:inputType="text"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="进样名称" />

                <Spinner
                    android:id="@+id/ddl_InjectionInfo"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"></Spinner>

                <Button
                    android:id="@+id/btnAddInjectionAction"
                    style="@style/toolButtonStyle"
                    android:text="@string/add" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/form_padding"></View>

                <Button
                    android:id="@+id/btnDeleteInjectionAction"
                    style="@style/toolButtonStyle"
                    android:text="@string/delete" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>
